# mars-c

./: .gitignore  CMakeLists.txt  README.md
example/c/simple/: CMakeLists.txt  Makefile  README.md  main.c
include/: cmars.h  mars.h  mars_core.h
include/addons/: mars_rand.h
include/containers/: lot.h  stack.h  unordered_map.h  vector.h
include/internal/: internal.h  platform.h
include/internal/containers/: stack.h  unordered_map.h
include/internal/math/: mat2.h  mat3.h  mat4.h  transforms.h  vec2.h  vec3.h  vec4.h
include/mars/: core.h  mars.h  mars_core.h
include/mars/addons/: mars_rand.h
include/mars/components/: mars_component_step.h  mars_component_transform.h
include/mars/containers/: lot.h  vector.h
src/: core.c  libmars.c  libmars_depreciated.c  main.c  mars_common.c  mars_common.h  mars_component_transform.c  mars_component_transform.h  mars_core.c  mars_engine.c  mars_engine.h  mars_entity.c  mars_entity.h  mars_system_transform.c  mars_system_transform.h
src/components/: mars_component_step.c  mars_component_transform.c
src/containers/: lot.c  stack.c  unordered_map.c  vector.c
src/internal/math/: mat2.c  mat3.c  mat4.c  transforms.c  vec2.c  vec3.c  vec4.c
src/math/: vec4.c
